--- a/spring-core/src/main/resources/application.yml
+++ b/spring-core/src/main/resources/application.yml
@@ -10,6 +10,9 @@ spring:
         format_sql: true
     open-in-view: false
 
+core:
+  project-version: ${version}
+
 logging:
   pattern:
     dateformat: yyyy-MM-dd HH:mm:ss.SSS
