--- a/spring-kafka/src/main/resources/application.yml
+++ b/spring-kafka/src/main/resources/application.yml
@@ -1,1 +1,17 @@
-
+spring:
+  kafka:
+    bootstrap-servers: localhost:9092
+    admin:
+      auto-create: false
+    consumer:
+      group-id: kafka
+      value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+      properties:
+#        "[spring.json.trusted.packages]": * # DefaultJackson2JavaTypeMapper, java.util, java.lang 은 기본 포함
+        "[spring.json.use.type.headers]": false
+        "[spring.json.value.default.type]": java.util.LinkedHashMap
+        "[spring.deserializer.value.delegate.class]": org.springframework.kafka.support.serializer.JsonDeserializer
+    producer:
+      value-serializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+      properties:
+        "[spring.json.add.type.headers]": false
