feat(spring-kafka): kafka docker compose
- authentication

--- a/spring-kafka/docker-compose.yml
+++ b/spring-kafka/docker-compose.yml
@@ -29,7 +29,10 @@ services:
     environment:
       KAFKA_CLUSTERS_0_NAME: local
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:29092
-      DYNAMIC_CONFIG_ENABLED: true
+      DYNAMIC_CONFIG_ENABLED: 'true'
+      AUTH_TYPE: 'LOGIN_FORM'
+      SPRING_SECURITY_USER_NAME: admin
+      SPRING_SECURITY_USER_PASSWORD: 111111
   kafka-init:
     container_name: kafka-init
     image: confluentinc/cp-kafka:7.5.3
