--- a/spring-core/src/main/resources/application.yml
+++ b/spring-core/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
         show_sql: false
         format_sql: true
     open-in-view: false
+    defer-datasource-initialization: true
 
 core:
   project-version: ${version}
