--- a/spring-core/src/main/resources/application.yml
+++ b/spring-core/src/main/resources/application.yml
@@ -10,6 +10,10 @@ spring:
         format_sql: true
     open-in-view: false
     defer-datasource-initialization: true
+  jackson:
+    deserialization:
+      read-date-timestamps-as-nanoseconds: false
+
 
 core:
   project-version: ${version}
