feat(spring-jpa): batch insert

--- a/spring-jpa/src/main/resources/application.yml
+++ b/spring-jpa/src/main/resources/application.yml
@@ -5,8 +5,12 @@ spring:
     password: 111111
 
   jpa:
+    hibernate:
+      ddl-auto: create
     properties:
       hibernate:
+        jdbc:
+          batch_size: 100
         show_sql: false
         format_sql: true
     open-in-view: false
@@ -15,6 +19,7 @@ spring:
 logging:
   level:
     "[com.ask]": debug
+    "[org.mariadb.jdbc]": trace
     "[org.hibernate.SQL]": debug
     "[org.hibernate.orm.jdbc.bind]": trace
   pattern:
