feat(error-handling): Filter 예외 ControllerAdvice 로 공통 처리

--- a/error-handling/src/main/resources/application.yml
+++ b/error-handling/src/main/resources/application.yml
@@ -1,3 +1,11 @@
 spring:
   application:
     name: error-handling
+server:
+  error:
+    whitelabel:
+      enabled: false
+
+logging:
+  level:
+    "[org.apache.catalina.core.ContainerBase]": off
