--- a/hexagonal/src/main/resources/application.yml
+++ b/hexagonal/src/main/resources/application.yml
@@ -1,3 +1,19 @@
 spring:
-  application:
-    name: hexagonal
+  datasource:
+    url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+    username: sa
+
+  jpa:
+    properties:
+      hibernate:
+        show_sql: false
+        format_sql: true
+    open-in-view: false
+    defer-datasource-initialization: true
+
+logging:
+  level:
+    "[com.ask]": debug
+    "[org.mariadb.jdbc]": info
+    "[org.hibernate.SQL]": debug
+    "[org.hibernate.orm.jdbc.bind]": trace
