feat(cloud-aws): oci Buckets, s3 sdk upload

--- a/cloud-aws/src/main/resources/application.yml
+++ b/cloud-aws/src/main/resources/application.yml
@@ -4,4 +4,10 @@ spring:
   cloud:
     aws:
       region:
-        static: ap-northeast-2
+        static: {region}
+      credentials:
+        access-key:
+        secret-key:
+      s3:
+        endpoint: https://{namespace}.compat.objectstorage.{region}.oraclecloud.com
+        path-style-access-enabled: true
