--- a/spring-kafka/src/main/resources/application.yml
+++ b/spring-kafka/src/main/resources/application.yml
@@ -1,18 +1,16 @@
 spring:
+  application:
+    name: spring-kafka
   kafka:
     bootstrap-servers: localhost:9092
     admin:
       auto-create: false
     consumer:
+      group-id: \${spring.application.name}
+      key-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
       properties:
-#        "[spring.json.trusted.packages]": * # DefaultJackson2JavaTypeMapper, java.util, java.lang 은 기본 포함
-#        "[spring.json.use.type.headers]": false
-#        "[spring.json.value.default.type]": java.util.LinkedHashMap
+        "[partition.assignment.strategy]": org.apache.kafka.clients.consumer.CooperativeStickyAssignor
+        "[spring.deserializer.key.delegate.class]": org.apache.kafka.common.serialization.StringDeserializer
         "[spring.deserializer.value.delegate.class]": org.apache.kafka.common.serialization.StringDeserializer
-      key-deserializer:
-      auto-offset-reset: latest
-    producer:
-      value-serializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
-      properties:
-        "[spring.json.add.type.headers]": false
+
