test(spring-jpa): 동시성 관련 테스트 코드 수정

--- a/spring-jpa/src/main/resources/application.yml
+++ b/spring-jpa/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mariadb://localhost:3306/jpa_test?createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/jpa_test?createDatabaseIfNotExist=true
     username: root
     password: 111111
 
@@ -19,8 +19,5 @@ spring:
 logging:
   level:
     "[com.ask]": debug
-    "[org.mariadb.jdbc]": info
     "[org.hibernate.SQL]": debug
     "[org.hibernate.orm.jdbc.bind]": trace
-  pattern:
-    dateformat: yyyy-MM-dd HH:mm:ss.SSS
