feat(spring-ai):prompt 로그 출력 및 PromptChatMemoryAdvisor 사용

--- a/spring-ai/src/main/resources/application.yml
+++ b/spring-ai/src/main/resources/application.yml
@@ -1,6 +1,18 @@
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
 spring:
   application:
     name: spring-ai
   ai:
     openai:
       api-key: ${openaiApiKey}
+    chat:
+#      client:
+#        observations:
+#          log-prompt: true # user, system 입력한 내용만 보이고 전체 내용은 안보임
+      observations:
+        log-prompt: true
