--- a/spring-ai/src/main/resources/application.yml
+++ b/spring-ai/src/main/resources/application.yml
@@ -10,9 +10,18 @@ spring:
   ai:
     openai:
       api-key: ${openaiApiKey}
-    chat:
+      chat:
+        options:
+          model: gpt-4o-mini # default
+          temperature: 0.7 # default
+
+#    chat:
 #      client:
 #        observations:
 #          log-prompt: true # user, system 입력한 내용만 보이고 전체 내용은 안보임
-      observations:
-        log-prompt: true
+#      observations:
+#        log-prompt: true # Chat 모델 프롬프트 전체가 보임
+
+logging:
+  level:
+    "[org.springframework.ai.chat.client.advisor.SimpleLoggerAdvisor]": debug
