--- a/spring-ai/src/main/resources/application.yml
+++ b/spring-ai/src/main/resources/application.yml
@@ -14,6 +14,9 @@ spring:
         options:
           model: gpt-4o-mini # default
           temperature: 0.7 # default
+      embedding:
+        options:
+          model: text-embedding-3-large # default, text-embedding-ada-002
 
 #    chat:
 #      client:
