feat(spring-ai): etl pipeline

--- a/spring-ai/src/main/resources/application.yml
+++ b/spring-ai/src/main/resources/application.yml
@@ -7,6 +7,12 @@ management:
 spring:
   application:
     name: spring-ai
+
+  servlet:
+    multipart:
+      max-request-size: -1
+      max-file-size: -1
+
   ai:
     model:
       chat: ollama
