test(spring-ai): RetrievalAugmentationAdvisorTest

--- a/spring-ai/src/main/resources/application.yml
+++ b/spring-ai/src/main/resources/application.yml
@@ -23,7 +23,7 @@ spring:
       chat:
         options:
           model: gpt-4o-mini # default
-          temperature: 0.7 # default
+          temperature: 0.0 # default 0.7
       embedding:
         options:
           model: text-embedding-3-large # default, text-embedding-ada-002
@@ -49,9 +49,9 @@ spring:
         database-name: SpringAiDatabase # default
         collection-name: SpringAiCollection # default
 
-    chat:
-      observations:
-        log-prompt: true # Chat 모델 프롬프트 전체가 보임
+#    chat:
+#      observations:
+#        log-prompt: true # Chat 모델 프롬프트 전체가 보임
 #      client:
 #        observations:
 #          log-prompt: true # user, system 입력한 내용만 보이고 전체 내용은 안보임
