refactor(spring-ai): mcp-client tool 설정 변경

--- a/spring-ai/src/main/resources/application.yml
+++ b/spring-ai/src/main/resources/application.yml
@@ -77,5 +77,4 @@ spring:
 
 logging:
   level:
-    "[org.springframework.ai.chat.client.advisor.SimpleLoggerAdvisor]": debug
-    "[org.springframework.ai.tool]": debug
+    "[org.springframework.ai]": debug
