feat(spring-jpa): ColumnTransformer 사용시 비밀키 치환

--- a/spring-jpa/src/main/resources/application.yml
+++ b/spring-jpa/src/main/resources/application.yml
@@ -18,6 +18,9 @@ spring:
     open-in-view: false
     defer-datasource-initialization: true
 
+custom:
+  db-secret-key: secret
+
 logging:
   level:
     "[com.ask]": debug
